implement backspace navigation

--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@ Macro.add("statmod", {
     }
   }
 });</script><tw-passagedata pid="1" name="home" tags="" position="25,150" size="100,100">Nul ne naît égal sous l’œil de Crom. Certains héritent de muscles saillants, de poitrines velues ou de regards farouches. Mablark, jeune ork de la tribu des Blarielles, hérita d’une pilosité timide et d’une constitution hasardeuse, lui conférant une tendance à l’hypochondrie. Ce défaut le rendait peu performant dans les combats, la moindre blessure infligée à un proche se répercutant immédiatement sur sa vitalité.
-&lt;div class=&#39;img-holder&#39;&gt;&lt;img src=&quot;img/family.jpeg&quot;&gt;&lt;/div&gt;
+&lt;div class=&#39;img-holder&#39;&gt;&lt;img src=&quot;img/family.jpeg&quot; class=&quot;landscape&quot;&gt;&lt;/div&gt;
 Bien que la nature ne l’ait guère avantagé pour un ork, il possèdait une splendide chevelure blonde.Cet attribut ainsi que son charisme légendaire lui permirent d’obtenir le titre de barde du clan et de séduire la belle et puissante Koralourk avec qui il eut deux filles: Mannagh et Olivarn, qui héritèrent de la blondeur de leur père et de la vaillance de leur mère.
 &lt;&lt;nobr&gt;&gt;&lt;div class=&quot;choices&quot;&gt;
     &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Continuer.&lt;/div&gt;&#39; &#39;intro2&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
@@ -1273,7 +1273,7 @@ Le marchand propose les objets suivants, les CGV stipulant que tout objet acquis
 	&lt;&lt;nextDay&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;
 La famille parvient après un voyage sans encombre à la grotte des sources chaudes. Après un bain soufré rassérénant, Mablark accompagne Olivarn pour qu’elle effectue son premier exploit ork: la descente glacée depuis la cime de Skiväll. 
-Munis de planches vernis, père et fille atteignent le haut de la Montagne. Mablark, dos fragile mais cœur vaillant, s\’élance avec ce qui ressemblerait presque à de l’assurance. À ses côtés, Olivarn glisse avec une agilité insolente, portée par le vent. Alors qu’elle dépasse son père, Olivarn lui lance :
+Munis de planches vernies, père et fille atteignent le haut de la Montagne. Mablark, dos fragile mais cœur vaillant, s’élance avec ce qui ressemblerait presque à de l’assurance. À ses côtés, Olivarn glisse avec une agilité insolente, portée par le vent. Alors qu’elle dépasse son père, Olivarn lui lance :
 — « Allez, père ! On dirait un nain arthritique ! » Piqué dans son orgueil, Mablark se penche, prend de la vitesse et fonce tête baissée sur la piste glacée.
 Le vent siffle, les arbres défilent, la montagne tremble sous son élan.
 
