--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="Mablark le glabre ou la quête de la reconnaissance 1" startnode="1" creator="Twine" creator-version="2.10.0" format="SugarCube" format-version="2.37.3" ifid="c9fe5768-c846-4c56-bf79-e575ec499470" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/* twine-user-stylesheet #1: "Story Stylesheet" */
+	<tw-storydata name="Mablark le glabre ou la quête de la reconnaissance 1" startnode="70" creator="Twine" creator-version="2.10.0" format="SugarCube" format-version="2.37.3" ifid="c9fe5768-c846-4c56-bf79-e575ec499470" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/* twine-user-stylesheet #1: "Story Stylesheet" */
 :root {
   --displayfont: "Playfair Display", serif;
   --monofont: "Roboto Mono", monospace;
@@ -1821,6 +1821,18 @@ Le mystère est levé… mais avec une récolte détruite et une doyenne carboni
 &lt;&lt;/nobr&gt;&gt;
 &lt;div class=&#39;no-show&#39;&gt;
     [[1-&gt;rhume_scelerat]]
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="70" name="Untitled Passage" tags="" position="150,0" size="100,100">&lt;&lt;set $gamechapter = &quot;Avant propos&quot;&gt;&gt;
+Chaque œuvre de fiction comporte sa part de vérité et toute légende digne de ce nom mérite d’être un jour contée. Pour toutes les fois où tu nous as tenu en haleine dans tes récits extraordinaires, pour toutes les fois où tu as transformé la plus banale de tes journées en incroyable épopée, pour toutes les fois où ton éloquence et ton art de l’interprétation dramatique ont marqué nos esprits, à tel point que tu supplantes bien souvent l’oeuvre originale, à notre tour de te narrer une aventure: la tienne. Nous avons sélectionné avec soin des moments clefs de tes 40 années d’existence pour en faire ce jeu dont tu es le héros. Sauras-tu venir à bout de la quête de la reconnaissance? Pour le savoir, arme-toi de tes plus beaux dés, d’une feuille et d’un stylo et laisse-toi porter par notre narration. Que Crom soit avec toi! 
+
+Tes potes
+
+Toute ressemblance avec des faits et des personnages existants ou ayant existé serait purement préméditée et serait tout sauf le fruit d&#39;une pure coïncidence.
+
+&lt;&lt;nobr&gt;&gt;&lt;div class=&quot;choices&quot;&gt;
+    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Continuer.&lt;/div&gt;&#39; &#39;home&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
+&lt;/div&gt;&lt;&lt;/nobr&gt;&gt;
+&lt;div class=&#39;no-show&#39;&gt;
+    [[Continuer-&gt;home]]
 &lt;/div&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
