--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ than 750px
     font-size: 1.4em;
 }
 img {
-  border-radius: 6px;
+  border-radius: 7px;
   max-width: 420px;
   height: auto;
 }
@@ -847,7 +847,7 @@ Bien que la nature ne l’ait guère avantagé pour un ork, il possèdait une sp
 &lt;div class=&#39;no-show&#39;&gt;
     [[Continuer-&gt;intro2]]
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="2" name="intro2" tags="" position="150,150" size="100,100">Un malencontreux coup du sort lui avait valu dans sa jeunesse de s’embrocher la paume de la main lors d’un duel épique avec une tranche de jambon, avec un coutelas d&#39;entraînement, tout juste bon à tartiner du foie gras... 
-Depuis ce jour, la tribu avait décrété qu’aucun objet tranchant — même vaguement — ne devait plus jamais approcher de ses mains. C’est ainsi qu’il dut renoncer aux épées flamboyantes et se contenter de son fidèle gourdin Anduril que les mauvaises langues qualifieront plus tard de gourdinet, mais qu’importe!
+Depuis ce jour, la tribu avait décrété qu’aucun objet tranchant — même vaguement — ne devait plus jamais approcher de ses mains. C’est ainsi qu’il dut renoncer aux épées flamboyantes et se contenter de son fidèle gourdin Anduril que les mauvaises langues qualifient de gourdinet, mais qu’importe!
 
 Mais Mablark nourrissait un rêve : prouver sa valeur et gagner l’estime de ses pairs. Car selon la loi des steppes, celui qui accomplira un exploit guerrier pourra enfin prétendre à la reconnaissance et peut-être même renverser la mainmise des femelles autoritaires qui dirigent la tribu.
 
@@ -1059,13 +1059,13 @@ C’est le Rhume Scélérat, ennemi juré des constitutions fragiles et des hypo
     [[3-&gt;rhume1-effect1]]
     [[4-&gt;rhume1-effect2]]
     [[5-&gt;rhume1-effect3]]
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="19" name="rhume2" tags="" position="450,875" size="100,100">Mablark, transi et morveux, se plaint auprès des femelles, leur explique combien la vie lui est difficile et jète un dé de charisme à $charisma faces pour décider de la manière dont ses complaintes vont être reçues par la gente féminine.
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="19" name="rhume2" tags="" position="450,875" size="100,100">Mablark, transi et morveux, se plaint auprès des femelles, leur explique combien la vie lui est difficile et jète un jet de charisme à 4 faces, auxquel il ajoute ses &lt;&lt;=$charisma&gt;&gt; points de charisme, pour décider de la manière dont ses complaintes vont être reçues par la gente féminine.
 
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
-    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Dé = &lt;&lt;= $charisma&gt;&gt;.&lt;/div&gt;&#39; &#39;rhume2-effect1&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
-    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Dé  &lt; 10.&lt;/div&gt;&#39; &#39;rhume2-effect2&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
-    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Dé  &gt;= 10.&lt;/div&gt;&#39; &#39;rhume2-effect3&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
+    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Score &gt;= &lt;&lt;= 4+$charisma&gt;&gt;.&lt;/div&gt;&#39; &#39;rhume2-effect1&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
+    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Score  &lt; 9 .&lt;/div&gt;&#39; &#39;rhume2-effect2&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
+    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Score  &gt;= 9.&lt;/div&gt;&#39; &#39;rhume2-effect3&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
   &lt;/div&gt;
 &lt;&lt;/nobr&gt;&gt;
 
@@ -1777,7 +1777,7 @@ La tribu perd encore un peu plus de respect pour lui.
 &lt;&lt;statmod &quot;health&quot; +1&gt;&gt;&lt;&lt;/statmod&gt;&gt;
 Alors que les rires se dissipent, Koralourk sa caustique compagne — se lève.
 Elle ricane, brandissant une fiole trouble qu&#39;elle lui jète négligemment.
-— « Tiens, héros des mouchoirs, avale cette décoction à base de poudre d’os de dolipranosaurus. Ce n’est pas tant pour toi que pour nos oreilles, on en peut plus de t&#39;entendre whiner du matin au soir. »
+— « Tiens, héros des mouchoirs, avale cette décoction à base de poudre d’os de dolipranosaurus et de tea tree. Ce n’est pas tant pour toi que pour nos oreilles, on en peut plus de t&#39;entendre whiner du matin au soir. »
 Mablark avale le breuvage. Miracle ! Ses narines se libèrent, son souffle redevient martial… mais sa virilité encaisse un coup de hache symbolique.
 — &lt;span class=&quot;good-news&quot;&gt;PV +1&lt;/span&gt;
 — &lt;span class=&quot;bad-news&quot;&gt;Charisme -2&lt;/span&gt;
